--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 authors = ["Jackal <ywzjackal@163.com>"]
 
 [dependencies]
+serde = "0.9"
+serde_derive = "0.9"
 serde_json = "0.9"
+log = "*"
+env_logger = "*"
+rand = "*"
